# datathon-7mlet-grupo-10

./: LICENSE  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
data/kaggle/: README.md
data/kaggle/notebooks/: aed-banco.ipynb  bank-marketing-classification-roc-f1-recall.ipynb
data/kaggle/processed/: bank-processed.csv
data/processed/: DICIONARIO_DE_DADOS.md
data/synthetic_enrichment/: data-generation.ipynb  offer_catalog.csv
doc/: ideia.excalidraw
reports/: data-generation.md
